tests/macro-tests/cases/widget_new/incorrect_arg_type5.stderr
error[E0308]: mismatched types
  --> cases/widget_new/incorrect_arg_type5.rs:10:5
   |
8  | pub fn simple_type(child: impl IntoUiNode, simple_a: impl IntoVar<u32>, simple_b: impl IntoVar<u32>) -> UiNode {
   |                           --------------- found this type parameter                                     ------ expected `zng::prelude::UiNode` because of return type
9  |     let _ = (simple_a, simple_b);
10 |     child
   |     ^^^^^ expected `UiNode`, found type parameter `impl IntoUiNode`
   |
   = note:      expected struct `zng::prelude::UiNode`
           found type parameter `impl IntoUiNode`

error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type5.rs:16:27
   |
16 |         simple_type = 42, true;
   |         -----------       ^^^^ the trait `IntoVar<u32>` is not implemented for `bool`
   |         |
   |         required by a bound introduced by this call
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type::simple_type`
  --> cases/widget_new/incorrect_arg_type5.rs:8:88
   |
8  | pub fn simple_type(child: impl IntoUiNode, simple_a: impl IntoVar<u32>, simple_b: impl IntoVar<u32>) -> UiNode {
   |                                                                                        ^^^^^^^^^^^^ required by this bound in `simple_type::simple_type`
